# ToolLinux

./: AUTHORS  CMakeLists.txt  CODEOWNERS  CONTRIBUTING  LICENSE  README.md  main.cpp
config/: config_manager.cpp  config_manager.hpp  default.cfg
core/: logger.cpp  logger.hpp  lowlevel.c  lowlevel.h  system_info.cpp  system_info.hpp
data/: model.hpp  settings.hpp
include/: config.hpp
io/: file_io.cpp  file_io.hpp
modules/disktool/: disk_info.cpp  disk_info.hpp
modules/monitor/: net_scan.cpp  net_scan.hpp
modules/nettool/: process_monitor.cpp  process_monitor.hpp
scripts/: build.sh  run_tests.sh
tests/: CMakeLists.txt
tests/core/: test_logger.cpp
tests/modules/: test_disk_info.cpp
utils/: string_util.cpp  string_util.hpp
